syntax = "proto3";

package products;

import "google/protobuf/timestamp.proto";


option java_multiple_files = true;
option java_package = "com.ecommerceapp.generated.products";

message ProductResponse {
    string id = 1;
    string name = 2;
    string description = 3;
    repeated string images = 4;
    string thumbnail = 5;
    repeated string category_ids = 6;
    string shop_id = 7;
  
    message VariationResponse {
      string id = 1;
      string name = 2;
    }
  
    repeated VariationResponse variations = 8;
    int32 sold_total = 9;
    google.protobuf.Timestamp created_at = 10;
    google.protobuf.Timestamp updated_at = 11;
}
